@@ -20,7 +20,7 @@
         <jetty.version>9.4.34.v20201102</jetty.version>
         <jruby.version>9.2.17.0</jruby.version>
         <logback.version>1.2.8</logback.version>
-        <surefire.version>3.0.0-M3</surefire.version>
+        <surefire.version>3.0.0-M5</surefire.version>
     </properties>
 
     <developers>
@@ -420,6 +420,8 @@
                 <configuration>
                     <runOrder>random</runOrder>
                     <reuseForks>false</reuseForks>
+                    <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                    <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -555,6 +557,8 @@
                         <configuration>
                             <runOrder>random</runOrder>
                             <reuseForks>false</reuseForks>
+                            <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                            <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                             <excludes>
                                 <exclude>AzureStorage*Test</exclude>
                                 <exclude>FfmpegProcessorTest</exclude>
@@ -584,6 +588,8 @@
                         <configuration>
                             <runOrder>random</runOrder>
                             <reuseForks>false</reuseForks>
+                            <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                            <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                             <excludes>
                                 <exclude>Azure*Test</exclude>
                             </excludes>
